<resources>
    <string name="app_name">Falling Alerter</string>
    <string name="noPhoneMessage">You don\'t have an Emergency phone number defined !</string>
    <string name="noPhoneQuestion">Do you want to define one now ?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="emergencyContact">Your emergency contact: %1$s - %2$s</string>
    <string name="action_settings">Settings</string>
    <string name="sensorMotionButton">Sensor monitoring</string>
    <string name="showLocationButton">Show my location</string>
    <string name="startStopButton">%1$s service</string>
    <string name="sensorListButton">Device sensor list</string>
    <string name="aboutButton">About</string>
    <string name="axaX">X AXIS: %.2f</string>
    <string name="axaZ">Z AXIS: %.2f</string>
    <string name="axaY">Y AXIS: %.2f</string>
    <string name="quit_text_message">Do you want to quit %1$s ?</string>
    <string name="activitySensor">Sensor monitoring</string>
    <string name="copyright"> © Code Busters JR </string>
    <string name="settingsActivity">Settings</string>
    <string name="title_activity_my_location">My location</string>
    <string name="locationPersmissionDenied">Did not receive permission! Please try again.</string>
    <string name="LocationMarkerTitle">Your Location: %1$s</string>
    <string name="serviceOnOff">Keep background service on</string>
    <string name="audioFeedback">Give audio feedback on your status</string>
    <string name="sms">Send SMS to emergency contact ?</string>
    <string name="call">Call emergency contact ?</string>
    <string name="both">Call and sens SMS to emergency contact ?</string>
    <string name="changeContactButton">Change emergency contact</string>
    <string name="sensorSensibility">Sensor Sensibility SlideBar</string>
    <string name="nothing">Do nothing</string>
    <string name="valueMin">0</string>
    <string name="valueaMax">10</string>
    <string name="currentValue">Current Value: %1$s</string>
    <string name="choose">Choose what to do in case of detected fall</string>
    <string name="noAddress">No addres was found from your location</string>
    <string name="gpsQuestion">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="sensorListTitle">Sensor List</string>
    <string name="aboutMessage">About Falling Alerter</string>
    <string name="aboutStory">Falling Alerter is an app mainly designed for people with diverse illnesses. The main purpose is to help them in case of an accident. A chosen person can automatically be contacted if the app registers a fall. The app can also locate the person. </string>
    <string name="aboutTeam">The app has been designed by CODEBUSTERS JR , a team made of three highschool students and a responsible programmer.</string>

    <string name="SMS_Location">I need help!My location is %1$s</string>
    <string name="SMS_NoLocation">I need help!</string>
    <string name="maxValues">Biggest values \n X: %1$.2f \n Y: %2$.2f \n Z: %3$.2f</string>
    <string name="serviceStarted">Monitoring service succesfully started</string>
    <string name="serviceStopped">Service is now stopped</string>
    <string name="defaultNotificationText">Your current state is %1$s</string>
    <string name="currentVolume">Current Volume: %1$s</string>
    <string name="smsSent">Emergency SMS was sent</string>
    <string name="nopermisionToCallPhone">The permision for calling was denied</string>
    <string name="noPermisionForSms">The permision to send SMS was denied</string>
    <string name="callPermission">The app needs this permission so that it can call the emergency contact person in case of a detected fall. Do you want to go back and grant permission?</string>
    <string name="smsPermission">The app needs this permission so that it can sens SMS to the emergency contact person in case of a detected fall. Do you want to go back and grant permission?</string>
    <string name="gpsPermission">The app needs this permission so that it can detect your location in case of falling and introduce it in the emergency SMS. Do you want to go back and grant permission?</string>

</resources>
