<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrolling"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fallingalerter.SettingsActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSensorSens"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallMargin"
            android:text="@string/sensorSensibility"
            android:textAllCaps="false"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/textViewCurentSeekbar"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallMargin"
            android:text="@string/currentValue"
            android:textAllCaps="false" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_marginTop="26dp"
            android:max="10" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/smallMargin"
            android:layout_marginRight="@dimen/smallMargin">

            <TextView
                android:id="@+id/textViewStartSeekbar"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekbar"
                android:layout_marginBottom="@dimen/smallMargin"
                android:text="@string/valueMin"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textViewEndSeekbar"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekbar"
                android:layout_marginBottom="@dimen/smallMargin"
                android:gravity="end"
                android:text="@string/valueaMax"

                />
        </android.support.v7.widget.LinearLayoutCompat>

        <CheckBox
            android:id="@+id/checkbox_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallMargin"
            android:text="@string/serviceOnOff" />

        <CheckBox
            android:id="@+id/checkbox_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallMargin"

            android:text="@string/audioFeedback" />
        <TextView
            android:id="@+id/textViewAudioValue"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallMargin"
            android:text="@string/currentVolume"
            android:textAllCaps="false"
            android:textStyle="bold"

            />


        <SeekBar
            android:id="@+id/audioSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_marginTop="26dp"
            android:max="10" />
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/smallMargin"
            android:layout_marginRight="@dimen/smallMargin">

            <TextView
                android:id="@+id/textViewStartAudio"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekbar"
                android:layout_marginBottom="@dimen/smallMargin"
                android:text="@string/valueMin"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textViewEndAudio"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekbar"
                android:layout_marginBottom="@dimen/smallMargin"
                android:gravity="end"
                android:text="@string/valueaMax"

                />
        </android.support.v7.widget.LinearLayoutCompat>
        <TextView
            android:id="@+id/textViewChoose"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/smallMargin"

            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms" />

            <RadioButton
                android:id="@+id/radio_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call" />

            <RadioButton
                android:id="@+id/radio_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both" />

            <RadioButton
                android:id="@+id/radio_nothing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallMargin"
                android:text="@string/nothing" />

        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/changeContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/defaultButtonMargin"
            android:layout_marginLeft="@dimen/defaultButtonMargin"
            android:layout_marginRight="@dimen/defaultButtonMargin"
            android:layout_marginStart="@dimen/defaultButtonMargin"
            android:background="@drawable/button_style"
            android:text="@string/changeContactButton"
            android:textAllCaps="false"
            android:textStyle="italic"

            />

        <TextView
            android:id="@+id/textViewContact"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergencyContact"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"

            />


    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>
</ScrollView>