<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/backgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fallingalerter.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/firstLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:gravity="center">


        <TextView
            android:id="@+id/textView2"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textLargeSizeFont"
            android:textStyle="bold"
            />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:foregroundGravity="center"
            android:src="@mipmap/logo_img_verde"
            android:layout_marginLeft="5dp"/>


    </android.support.v7.widget.LinearLayoutCompat>



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/secondLinearLayout"
        android:layout_below="@+id/firstLinearLayout"
        android:gravity="center"


        android:orientation="vertical">

        <TextView
            android:id="@+id/emergencyPersonText"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_marginBottom="@dimen/defaultButtonMargin"
            android:textSize="10dp"
            android:singleLine="true"


            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sensorMonitoringButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultButtonMargin"
            android:layout_marginLeft="@dimen/defaultButtonMargin"
            android:layout_marginRight="@dimen/defaultButtonMargin"
            android:layout_marginStart="@dimen/defaultButtonMargin"
            android:text="@string/sensorMotionButton"
            android:textAllCaps="false"
            android:drawableLeft="@mipmap/ic_sensor"
            android:layout_marginBottom="@dimen/defaultButtonMargin"
            android:background="@drawable/button_style"
            android:textStyle="italic"


            />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/showLocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultButtonMargin"
            android:layout_marginLeft="@dimen/defaultButtonMargin"
            android:layout_marginRight="@dimen/defaultButtonMargin"
            android:layout_marginStart="@dimen/defaultButtonMargin"
            android:text="@string/showLocationButton"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/defaultButtonMargin"
            android:drawableLeft="@mipmap/ic_googlemap"
            android:background="@drawable/button_style"
            android:textStyle="italic"
            />


            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/startStopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultButtonMargin"
            android:layout_marginLeft="@dimen/defaultButtonMargin"
            android:layout_marginRight="@dimen/defaultButtonMargin"
            android:layout_marginStart="@dimen/defaultButtonMargin"
            android:text="@string/startStopButton"
            android:textAllCaps="false"
            android:drawableLeft="@mipmap/ic_start"
            android:layout_marginBottom="@dimen/defaultButtonMargin"
            android:textStyle="italic"
            android:background="@drawable/button_style"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sensorListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultButtonMargin"
            android:layout_marginLeft="@dimen/defaultButtonMargin"
            android:layout_marginRight="@dimen/defaultButtonMargin"
            android:layout_marginStart="@dimen/defaultButtonMargin"
            android:text="@string/sensorListButton"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/defaultButtonMargin"
            android:drawableLeft="@mipmap/ic_omulet"
            android:textStyle="italic"
            android:background="@drawable/button_style"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/aboutButton"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultButtonMargin"
            android:layout_marginLeft="@dimen/defaultButtonMargin"
            android:layout_marginRight="@dimen/defaultButtonMargin"
            android:layout_marginStart="@dimen/defaultButtonMargin"
            android:text="@string/aboutButton"
            android:textAllCaps="false"
            android:drawableLeft="@mipmap/ic_questionmark"
            android:background="@drawable/button_style"

            />
        <TextView
        android:id="@+id/textView3"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSmallSizeFont"
        android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="bottom"

        />


    </android.support.v7.widget.LinearLayoutCompat>


</RelativeLayout>
</ScrollView>