<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrolling"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@drawable/dialog_style">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_style"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginBottom="@dimen/defaultButtonMargin"
            android:drawableLeft="@mipmap/ic_launcher"
            android:text="@string/aboutMessage"
            android:gravity="center"
            android:textColor="@color/textColor"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/defaultButtonMargin"
            android:layout_marginEnd="@dimen/medium"
            android:layout_marginLeft="@dimen/medium"
            android:layout_marginRight="@dimen/medium"
            android:layout_marginStart="@dimen/medium"
            android:gravity="center_horizontal"
            android:text="@string/aboutStory" />

        <TextView
            android:id="@+id/txt_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/defaultButtonMargin"
            android:layout_marginEnd="@dimen/medium"
            android:layout_marginLeft="@dimen/medium"
            android:layout_marginRight="@dimen/medium"
            android:layout_marginStart="@dimen/medium"
            android:gravity="center_horizontal"
            android:text="@string/aboutTeam" />

        <Button
            android:id="@+id/aboutOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:text="OK" />


    </LinearLayout>
</ScrollView>